Change use bz2 in staging build

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            curl ca-certificates make gcc g++ clang-4.0 pkg-config zip
+            curl ca-certificates make gcc g++ clang-4.0 pkg-config
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -34,9 +34,9 @@ jobs:
       - name: Collect shared
         run: |
           mkdir -p shared
-          zip -jr \
-            shared/darwinia-collator-linux-x86_64.zip \
-            target/x86_64-unknown-linux-gnu/release/darwinia-collator
+          tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+            -C target/x86_64-unknown-linux-gnu/release \
+            darwinia-collator
 
       - name: Upload shared
         uses: actions/upload-artifact@v2
@@ -71,7 +71,7 @@ jobs:
       - name: Extract package
         run: |
           mkdir -p dist
-          unzip shared/darwinia-collator-linux-x86_64.zip -d dist/
+          tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
 
       - name: Build and publish docker image
         run: |
