--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch =
 polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+xcm                 = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
