--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,10 @@ jobs:
           mkdir -p shared/darwinia-parachain-runtime
           tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C target/x86_64-unknown-linux-gnu/release \
-           darwinia-collator
+            darwinia-collator
+          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+            -C target/x86_64-unknown-linux-gnu/release \
+            darwinia-collator -I pzstd
 
           mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
           mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
@@ -157,6 +160,7 @@ jobs:
           mkdir -p deploy
 
           mv shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 deploy/
+          mv shared/darwinia-collator-x86_64-linux-gnu.tar.zst deploy/
 
           mv shared/crab-parachain-runtime/*.compact.compressed.wasm deploy/
           mv shared/crab-parachain-runtime/*.compact.compressed.json deploy/
