--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors     = ["Darwinia Network <hello@darwinia.network>"]
 build       = "build.rs"
-description = "Darwinia Runtime Module Library Node"
+description = "Darwinia Collator"
 edition     = "2018"
 homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
@@ -13,6 +13,9 @@ version     = "5.1.0"
 [[bin]]
 name = "darwinia-collator"
 path = "src/main.rs"
+
+[features]
+alpha = ["pangolin-parachain-runtime/alpha"]
 
 [dependencies]
 # crates.io
@@ -31,6 +34,7 @@ crab-parachain-runtime       = { path = "runtime/crab-parachain" }
 darwinia-collator-primitives = { path = "primitives" }
 darwinia-collator-rpc        = { path = "rpc" }
 darwinia-parachain-runtime   = { path = "runtime/darwinia-parachain" }
+pangolin-parachain-runtime   = { path = "runtime/pangolin-parachain" }
 
 # substrate
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
