Migrate Crab Parachain Token Decimal

--- a/runtime/crab-parachain/Cargo.toml
+++ b/runtime/crab-parachain/Cargo.toml
@@ -12,9 +12,10 @@ version     = "5.1.0"
 
 [dependencies]
 # crates.io
-codec      = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
-smallvec   = { version = "1.7" }
+array-bytes = { version = "1.5" }
+codec       = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
+scale-info  = { version = "1.0", default-features = false, features = ["derive"] }
+smallvec    = { version = "1.7" }
 # cumulus
 cumulus-pallet-aura-ext         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 cumulus-pallet-dmp-queue        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
