--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,142 +1,142 @@
-name: Checks
-on:
-  push:
-    branches:
-      - main
-      - master
-    paths:
-      - "**.rs"
-      - "**.toml"
-      - "**.lock"
-      - "**.json"
-      - "**.yml"
-  pull_request:
-    types: [opened, synchronize, ready_for_review]
-    branches:
-      - main
-      - master
-    paths:
-      - "**.rs"
-      - "**.toml"
-      - "**.lock"
-      - "**.json"
-      - "**.yml"
+# name: Checks
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
+#     paths:
+#       - "**.rs"
+#       - "**.toml"
+#       - "**.lock"
+#       - "**.json"
+#       - "**.yml"
+#   pull_request:
+#     types: [opened, synchronize, ready_for_review]
+#     branches:
+#       - main
+#       - master
+#     paths:
+#       - "**.rs"
+#       - "**.toml"
+#       - "**.lock"
+#       - "**.json"
+#       - "**.yml"
 
-env:
-  RUST_TOOLCHAIN: nightly
-  RUST_BACKTRACE: full
-  RUSTC_WRAPPER: sccache
-  SCCACHE_LINK: https://github.com/mozilla/sccache/releases/download
-  SCCACHE_VERSION: v0.2.15
-  SCCACHE_DIR: /home/runner/.cache/sccache
-  NODE_VERSION: 10
-  GITHUB_CACHE_VERSION: 1
+# env:
+#   RUST_TOOLCHAIN: nightly
+#   RUST_BACKTRACE: full
+#   RUSTC_WRAPPER: sccache
+#   SCCACHE_LINK: https://github.com/mozilla/sccache/releases/download
+#   SCCACHE_VERSION: v0.2.15
+#   SCCACHE_DIR: /home/runner/.cache/sccache
+#   NODE_VERSION: 10
+#   GITHUB_CACHE_VERSION: 1
 
-jobs:
-  basic-checks:
-    name: Task ${{ matrix.action }} ${{ matrix.task.target }}
-    if: github.event_name == 'push' || !github.event.pull_request.draft
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        action: [build, test]
-        task:
-          - target: darwinia-collator
-            repository: darwinia-network/darwinia-parachain
-          - target: subalfred
-            repository: hack-ink/subalfred
-        exclude:
-          - action: test
-            task:
-              target: subalfred
+# jobs:
+#   basic-checks:
+#     name: Task ${{ matrix.action }} ${{ matrix.task.target }}
+#     if: github.event_name == 'push' || !github.event.pull_request.draft
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         action: [build, test]
+#         task:
+#           - target: darwinia-collator
+#             repository: darwinia-network/darwinia-parachain
+#           - target: subalfred
+#             repository: hack-ink/subalfred
+#         exclude:
+#           - action: test
+#             task:
+#               target: subalfred
 
-    steps:
-      - name: Install Rust ${{ env.RUST_TOOLCHAIN }} toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-          default: true
+#     steps:
+#       - name: Install Rust ${{ env.RUST_TOOLCHAIN }} toolchain
+#         uses: actions-rs/toolchain@v1
+#         with:
+#           toolchain: ${{ env.RUST_TOOLCHAIN }}
+#           default: true
 
-      - name: Install Sccache
-        run: |
-          export SCCACHE_FILE=sccache-${{ env.SCCACHE_VERSION }}-x86_64-unknown-linux-musl
-          curl -L ${{ env.SCCACHE_LINK }}/${{ env.SCCACHE_VERSION }}/$SCCACHE_FILE.tar.gz | tar xz
-          sudo mv $SCCACHE_FILE/sccache /usr/bin
-          sudo chmod u+x /usr/bin/sccache
+#       - name: Install Sccache
+#         run: |
+#           export SCCACHE_FILE=sccache-${{ env.SCCACHE_VERSION }}-x86_64-unknown-linux-musl
+#           curl -L ${{ env.SCCACHE_LINK }}/${{ env.SCCACHE_VERSION }}/$SCCACHE_FILE.tar.gz | tar xz
+#           sudo mv $SCCACHE_FILE/sccache /usr/bin
+#           sudo chmod u+x /usr/bin/sccache
 
-      - name: Fetch latest code
-        uses: actions/checkout@v2
-        with:
-          repository: ${{ matrix.task.repository }}
+#       - name: Fetch latest code
+#         uses: actions/checkout@v2
+#         with:
+#           repository: ${{ matrix.task.repository }}
 
-      - name: Cache cargo
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: cargo-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: cargo-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-
+#       - name: Cache cargo
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ~/.cargo/registry
+#             ~/.cargo/git
+#             target
+#           key: cargo-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
+#           restore-keys: cargo-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-
 
-      - name: Cache sccache
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.SCCACHE_DIR}}
-          key: sccache-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: sccache-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-
+#       - name: Cache sccache
+#         uses: actions/cache@v2
+#         with:
+#           path: ${{ env.SCCACHE_DIR}}
+#           key: sccache-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
+#           restore-keys: sccache-${{ matrix.action }}-${{ matrix.task.target }}-${{ env.GITHUB_CACHE_VERSION }}-
 
-      - name: Action ${{ matrix.action }}
-        run: cargo ${{ matrix.action }} --locked
+#       - name: Action ${{ matrix.action }}
+#         run: cargo ${{ matrix.action }} --locked
 
-      - name: Compress ${{ matrix.task.target }}
-        if: matrix.action != 'test'
-        run: |
-          mv target/debug/${{ matrix.task.target }} .
-          tar cf ${{ matrix.task.target }}.tar.zst ${{ matrix.task.target }} -I pzstd
+#       - name: Compress ${{ matrix.task.target }}
+#         if: matrix.action != 'test'
+#         run: |
+#           mv target/debug/${{ matrix.task.target }} .
+#           tar cf ${{ matrix.task.target }}.tar.zst ${{ matrix.task.target }} -I pzstd
 
-      - name: Upload ${{ matrix.task.target }}
-        if: matrix.action != 'test'
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.task.target }}
-          path: ${{ matrix.task.target }}.tar.zst
+#       - name: Upload ${{ matrix.task.target }}
+#         if: matrix.action != 'test'
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: ${{ matrix.task.target }}
+#           path: ${{ matrix.task.target }}.tar.zst
 
-      - name: Purge large cache
-        if: matrix.task.target == 'darwinia-collator'
-        run: .github/purge-large-cache.sh
+#       - name: Purge large cache
+#         if: matrix.task.target == 'darwinia-collator'
+#         run: .github/purge-large-cache.sh
 
-  code-checks:
-    name: Task check code
-    if: github.event_name == 'push' || !github.event.pull_request.draft
-    needs: [basic-checks]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download subalfred
-        uses: actions/download-artifact@v2
-        with:
-          name: subalfred
+#   code-checks:
+#     name: Task check code
+#     if: github.event_name == 'push' || !github.event.pull_request.draft
+#     needs: [basic-checks]
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Download subalfred
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: subalfred
 
-      - name: Uncompress subalfred
-        run: |
-          tar xf subalfred.tar.zst -I pzstd
-          sudo mv subalfred /usr/bin
+#       - name: Uncompress subalfred
+#         run: |
+#           tar xf subalfred.tar.zst -I pzstd
+#           sudo mv subalfred /usr/bin
 
-      - name: Fetch latest code
-        uses: actions/checkout@v2
+#       - name: Fetch latest code
+#         uses: actions/checkout@v2
 
-      - name: Run checker
-        run: subalfred check default-features -p ../darwinia-parachain
+#       - name: Run checker
+#         run: subalfred check default-features -p ../darwinia-parachain
 
-  housekeeping-checks:
-    name: Task check housekeeping
-    if: always()
-    needs: [code-checks]
-    steps:
-      - name: Clean artifacts
-        uses: geekyeggo/delete-artifact@v1
-        with:
-          name: |
-            darwinia-collator
-            subalfred
-    runs-on: ubuntu-latest
+#   housekeeping-checks:
+#     name: Task check housekeeping
+#     if: always()
+#     needs: [code-checks]
+#     steps:
+#       - name: Clean artifacts
+#         uses: geekyeggo/delete-artifact@v1
+#         with:
+#           name: |
+#             darwinia-collator
+#             subalfred
+#     runs-on: ubuntu-latest
