--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -1,4 +1,4 @@
-name: Release
+name: TEST-CI
 
 on:
   pull_request:
@@ -35,9 +35,9 @@ jobs:
           tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C target/x86_64-unknown-linux-gnu/release \
             darwinia-collator
-          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
-            -C target/x86_64-unknown-linux-gnu/release \
-            darwinia-collator -I pzstd
+          # tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+          #   -C target/x86_64-unknown-linux-gnu/release \
+          #   darwinia-collator -I pzstd
 
           mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
           mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
