--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -19,8 +19,6 @@ jobs:
     container:
       image: ubuntu:16.04
     steps:
-      - uses: actions/checkout@v2
-
 
       - name: Test generate
         run: |
@@ -39,9 +37,9 @@ jobs:
           tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C target/x86_64-unknown-linux-gnu/release \
             darwinia-collator
-          # tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
-          #   -C target/x86_64-unknown-linux-gnu/release \
-          #   darwinia-collator -I pzstd
+          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+            -C target/x86_64-unknown-linux-gnu/release \
+            darwinia-collator -I pzstd
 
           mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
           mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
