--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Collect shared
         run: |
           apt update -y
-          apt install -y tree
+          apt install -y tree zstd
           tree
 
           mkdir -p shared/crab-parachain-runtime
