--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -4,7 +4,7 @@ description = "Parachain node runtime primitives"
 edition     = "2021"
 homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
-name        = "darwinia-collator-primitives"
+name        = "dc-primitives"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
 version     = "5.1.1"
