--- a/runtime/crab-parachain/Cargo.toml
+++ b/runtime/crab-parachain/Cargo.toml
@@ -28,7 +28,7 @@ cumulus-primitives-utility      = { default-features = false, git = "https://git
 pallet-collator-selection       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
 # darwinia
-darwinia-collator-primitives      = { default-features = false, path = "../../primitives" }
+dc-primitives                     = { default-features = false, path = "../../primitives" }
 pallet-fee-market-rpc-runtime-api = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
 # polkadot
 pallet-xcm         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
@@ -83,7 +83,7 @@ std = [
 	"cumulus-primitives-utility/std",
 	"pallet-collator-selection/std",
 	"parachain-info/std",
-	"darwinia-collator-primitives/std",
+	"dc-primitives/std",
 	"pallet-fee-market-rpc-runtime-api/std",
 	"pallet-xcm/std",
 	"polkadot-parachain/std",
