--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -36,6 +36,10 @@ pallet-transaction-payment = { default-features = false, git = "https://github.c
 sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 
+[dev-dependencies]
+pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
+sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
+
 [features]
 default = ["std"]
 
