--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,15 +24,23 @@ try-runtime = [
 	"try-runtime-cli",
 ]
 
+runtime-benchmarks = [
+	"pangolin-parachain-runtime/runtime-benchmarks",
+	# solution for issue: "missing `successful_origin` in implementation" https://substrate.stackexchange.com/questions/240/missing-successful-origin-in-implementation-when-running-runtime-benchmarks
+	"polkadot-cli/runtime-benchmarks",
+	"frame-benchmarking",
+	"frame-benchmarking-cli"
+]
+
 [dependencies]
 # crates.io
-array-bytes  = { version = "1.4" }
-async-trait  = { version = "0.1" }
-codec        = { package = "parity-scale-codec", version = "2.3" }
-futures      = { version = "0.3" }
+array-bytes = { version = "1.4" }
+async-trait = { version = "0.1" }
+codec = { package = "parity-scale-codec", version = "2.3" }
+futures = { version = "0.3" }
 jsonrpc-core = { version = "18.0" }
-log          = { version = "0.4" }
-serde        = { version = "1.0", features = ["derive"] }
+log = { version = "0.4" }
+serde = { version = "1.0", features = ["derive"] }
 structopt    = { version = "0.3" }
 tempfile     = { version = "3.2" }
 
@@ -90,15 +98,19 @@ cumulus-relay-chain-local             = { git = "https://github.com/paritytech/c
 pallet-fee-market-rpc-runtime-api = { git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.16" }
 
 # polkadot
-polkadot-cli        = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
-polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+polkadot-cli = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
-polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
-xcm                 = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
+
+# runtime benchmarking
+frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", optional = true }
+frame-benchmarking-cli = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", optional = true }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
-try-runtime-cli              = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
+try-runtime-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 
 [workspace]
 members = [
