--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,18 +181,28 @@ jobs:
 
       - name: Generate template data
         run: |
-          Z_PROPOSAL_CRAB_PARACHAIN_COMPACT=$(cat deploy/crab-parachain-runtime.compact.compressed.json | jq -r .proposal_hash)
-          Z_PROPOSAL_DARWINIA_PARACHAIN_COMPACT=$(cat deploy/darwinia-parachain-runtime.compact.compressed.json | jq -r .proposal_hash)
+          REGEX_RUNTIME_VERSION='s/.*-\([0-9]*\)[ ].*/\1/g'
+          FILE_CRAB_PARACHAIN=deploy/crab-parachain-runtime.compact.compressed.json
+          FILE_DARWINIA_PARACHAIN=deploy/darwinia-parachain-runtime.compact.compressed.json
+
+          PROPOSAL_CRAB_PARACHAIN_COMPRESSED=$(cat ${FILE_CRAB_PARACHAIN} | jq -r .proposal_hash)
+          PROPOSAL_DARWINIA_PARACHAIN_COMPRESSED=$(cat ${FILE_DARWINIA_PARACHAIN} | jq -r .proposal_hash)
+          RUNTIME_VERSION_CRAB_PARACHAIN=$(cat ${FILE_CRAB_PARACHAIN} | jq -r .core_version | sed "${REGEX_RUNTIME_VERSION}")
+          RUNTIME_VERSION_DARWINIA_PARACHAIN=$(cat ${FILE_DARWINIA_PARACHAIN} | jq -r .core_version | sed "${REGEX_RUNTIME_VERSION}")
 
           echo 'Template data:'
           jq -n \
-            --arg z_crab_parachain_proposal_compact "$Z_PROPOSAL_CRAB_PARACHAIN_COMPACT" \
-            --arg z_darwinia_parachain_proposal_compact "$Z_PROPOSAL_DARWINIA_PARACHAIN_COMPACT" \
+            --arg crab_parachain_proposal_compact "$PROPOSAL_CRAB_PARACHAIN_COMPACT" \
+            --arg darwinia_parachain_proposal_compact "$PROPOSAL_DARWINIA_PARACHAIN_COMPACT" \
+            --arg crab_parachain_runtime_version "$RUNTIME_VERSION_CRAB_PARACHAIN" \
+            --arg darwinia_parachain_runtime_version "$RUNTIME_VERSION_DARWINIA_PARACHAIN" \
             --arg tag "$GIT_TAG_NAME" \
             --arg sha "$SHA" \
             '{
-              z_crab_parachain_proposal_compact: $z_crab_parachain_proposal_compact,
-              z_darwinia_parachain_proposal_compact: $z_darwinia_parachain_proposal_compact,
+              crab_parachain_proposal_compact: $crab_parachain_proposal_compact,
+              darwinia_parachain_proposal_compact: $darwinia_parachain_proposal_compact,
+              crab_parachain_runtime_version: $crab_parachain_runtime_version,
+              darwinia_parachain_runtime_version: $darwinia_parachain_runtime_version,
               tag: $tag,
               sha: $sha
             }' | tee template_data.json
