--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,13 +25,15 @@ try-runtime = [
 ]
 
 runtime-benchmarks = [
+	# darwinia-network
 	"pangolin-parachain-runtime/runtime-benchmarks",
 	"crab-parachain-runtime/runtime-benchmarks",
 	"darwinia-parachain-runtime/runtime-benchmarks",
-	# solution for issue: "missing `successful_origin` in implementation" https://substrate.stackexchange.com/questions/240/missing-successful-origin-in-implementation-when-running-runtime-benchmarks
+	# paritytech
+	# TODO: https://github.com/paritytech/cumulus/pull/991
 	"polkadot-cli/runtime-benchmarks",
 	"frame-benchmarking",
-	"frame-benchmarking-cli"
+	"frame-benchmarking-cli",
 ]
 
 [dependencies]
@@ -107,8 +109,8 @@ polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch =
 xcm                 = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
 
 # runtime benchmarking
-frame-benchmarking             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", optional = true }
-frame-benchmarking-cli         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", optional = true}
+frame-benchmarking     = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
+frame-benchmarking-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
