--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "darwinia-collator"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.1.2"
+version     = "5.2.0-rc1"
 
 [[bin]]
 name = "darwinia-collator"
