--- a/runtime/darwinia-parachain/Cargo.toml
+++ b/runtime/darwinia-parachain/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "darwinia-parachain-runtime"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain/"
-version     = "5.1.2"
+version     = "5.2.0-rc1"
 
 [dependencies]
 # crates.io
