--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -7,7 +7,7 @@ license     = "GPL-3.0"
 name        = "dc-common-runtime"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.1.2"
+version     = "5.2.0-rc1"
 
 [dependencies]
 # crates.io
